- paraphrase generator added, spacing fixed for pages

--- a/static/style.css
+++ b/static/style.css
@@ -45,7 +45,7 @@ body {
 
 .main-container {
     display: flex;
-    height: 88.4vh;
+    height: 100vh;
 }
 
 
